updated ащдвук HTTP
